--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,3 +23,10 @@ jobs:
       - uses: streetsidesoftware/cspell-action@main
         with:
           files: "**/*.{md,rs,sh,toml}"
+  readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: lycheeverse/lychee-action@v1
+        with:
+          fail: true
