--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "mfmt"
+description = "Meta formatter library"
 version = "0.1.0"
 edition = "2021"
+license = "Unlicense"
+repository = "https://github.com/raviqqe/mfmt"
+readme = "../README.md"
+keywords = ["format", "language"]
 
 [dependencies]
 
