--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2021"
 license = "Unlicense"
 repository = "https://github.com/raviqqe/mfmt"
-readme = "../README.md"
+readme = "./README.md"
 keywords = ["format", "language"]
 
 [dependencies]
