--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "./README.md"
 keywords = ["format", "language"]
 
 [dependencies]
+allocator-api2 = "0.2.21"
 
 [dev-dependencies]
 indoc = "2.0.6"
