--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ repository = "https://github.com/raviqqe/mfmt"
 readme = "./README.md"
 keywords = ["format", "language"]
 
+[features]
+allocator-api = []
+
 [dependencies]
 allocator-api2 = "0.2.21"
 
